fix ZMK_MOD_TAP_TERM to have CONFIG_ prefix

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,6 +1,6 @@
 # Uncomment the following line to enable deep sleep
 # CONFIG_ZMK_SLEEP=y
-ZMK_MOD_TAP_TERM=500
+CONFIG_ZMK_MOD_TAP_TERM=500
 
 
 # Uncomment the following line to increase the keyboard's wireless range
